[gd_scene load_steps=16 format=2]

[ext_resource path="res://mapa_ataque.png" type="Texture" id=1]
[ext_resource path="res://personagens (1).png" type="Texture" id=2]
[ext_resource path="res://battle.gd" type="Script" id=3]
[ext_resource path="res://Péricles.tres" type="Resource" id=4]
[ext_resource path="res://PERICLES.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.992157, 0.00392157, 1 )
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=7]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 158.565, 89.9614 ), Vector2( 163.471, 94.486 ), Vector2( 153.009, 81.818 ), Vector2( 165.677, 81.024 ), Vector2( 151.422, 90.898 ), Vector2( 159.359, 89.1677 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 158.565, 89.9614 ), Vector2( 170.471, 99.4858 ), Vector2( 153.009, 82.8181 ), Vector2( 169.677, 82.0244 ), Vector2( 151.422, 97.8984 ), Vector2( 159.359, 89.1677 ) ]
}

[node name="battle" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
enemy = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 8.019
anchor_bottom = 4.483
margin_top = -0.33371
margin_right = -0.76001
margin_bottom = 0.346298
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 68.3794, 143.299 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 24, 71, 13, 21 )

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_right = 8.039
anchor_bottom = 4.528
margin_left = 177.0
margin_top = 33.0
margin_right = -35.56
margin_bottom = -83.12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 109.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
focus_mode = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "HP: 25/50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
margin_top = 20.0
margin_right = 109.0
margin_bottom = 48.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
anchor_right = 7.977
anchor_bottom = 4.449
margin_left = 150.0
margin_top = 127.0
margin_right = 0.919983
margin_bottom = 2.03998
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 19.0
margin_right = 75.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "ALUNO"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 79.0
margin_top = 18.0
margin_right = 154.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 16 )
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "HP: 25/50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsPanel" type="Panel" parent="."]
anchor_right = 8.086
anchor_bottom = 4.457
margin_left = 1.0
margin_top = 1.0
margin_right = -3.44
margin_bottom = -148.28
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Button" parent="ActionsPanel/actions"]
margin_right = 98.0
margin_bottom = 17.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Atacar"

[node name="defend" type="Button" parent="ActionsPanel/actions"]
margin_left = 104.0
margin_right = 202.0
margin_bottom = 17.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Defender"

[node name="run" type="Button" parent="ActionsPanel/actions"]
margin_left = 208.0
margin_right = 307.0
margin_bottom = 17.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Correr"

[node name="Textbox" type="Panel" parent="."]
anchor_right = 8.024
anchor_bottom = 4.496
margin_left = 7.37004
margin_top = 7.0
margin_right = -8.62994
margin_bottom = -151.36
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 6.11012
margin_right = -8.0
margin_bottom = -1.37003
text = "um Pérciles selvagem aparece!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ticker" type="Label" parent="Textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.8252
margin_top = -14.3323
margin_right = 3.1748
margin_bottom = 16.6677
text = ">
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemy_damaged = SubResource( 7 )
anims/enemy_died = SubResource( 8 )
anims/mini_shake = SubResource( 9 )
anims/shake = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 159.359, 89.1677 )
current = true

[connection signal="pressed" from="ActionsPanel/actions/attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionsPanel/actions/defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="ActionsPanel/actions/run" to="." method="_on_run_pressed"]
